--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
 <!--<a href="#" id="open_preferences_center">Update cookies preferences</a>-->
 
 <meta charset="utf-8">
-<title>Best Mobile App Development Company and Developer in Lagos, Nigeria</title>
+<title>Best Mobile App Development Company and Developer in Lagos, Nigeria 2 </title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
